@startuml

title __IMPL's Class Diagram__\n

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.BillingAccountServiceImpl {
            + BillingAccountServiceImpl()
            + addMoney()
            + ban()
            + delete()
            + getAll()
            + getAllByOwnerId()
            + getById()
            + save()
            + unBan()
        }
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.ProductInstanceServiceImpl {
            + ProductInstanceServiceImpl()
            + changeStatus()
            + delete()
            + getByBillingAccountId()
            + getById()
            + getByUserId()
            + getProductInstances()
            + save()
            + save()
            + update()
        }
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.ProductOfferingServiceImpl {
            + ProductOfferingServiceImpl()
            + ban()
            + getProductOfferingByName()
            + getProductOfferings()
            + getProductOfferingsByCategory()
            + getSubscriptionById()
            + save()
            + unBan()
        }
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.StatisticsServiceImpl {
            + StatisticsServiceImpl()
            + getStatisticsForBillingAccount()
            + getStatisticsForCategory()
        }
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.UserAccountServiceImpl {
            + UserAccountServiceImpl()
            + ban()
            + changeActiveBillingAccount()
            + getAll()
            + getSubscriptionsQuantity()
            + getUserAccount()
            + getUserAccountById()
            + getUserAccountByName()
            + save()
            + unBan()
        }
      }
    }
  }
  

  by.training.nc.sd3.service.impl.BillingAccountServiceImpl .up.|> by.training.nc.sd3.service.BillingAccountService
  by.training.nc.sd3.service.impl.BillingAccountServiceImpl o-- by.training.nc.sd3.service.ProductInstanceService : productInstanceService
  by.training.nc.sd3.service.impl.BillingAccountServiceImpl o-- by.training.nc.sd3.repository.BillingAccountRepository : repository
  by.training.nc.sd3.service.impl.ProductInstanceServiceImpl .up.|> by.training.nc.sd3.service.ProductInstanceService
  by.training.nc.sd3.service.impl.ProductInstanceServiceImpl o-- by.training.nc.sd3.repository.BillingAccountRepository : billingAccountRepository
  by.training.nc.sd3.service.impl.ProductInstanceServiceImpl o-- by.training.nc.sd3.repository.ProductInstanceRepository : productInstanceRepository
  by.training.nc.sd3.service.impl.ProductInstanceServiceImpl o-- by.training.nc.sd3.repository.UserAccountRepository : userAccountRepository
  by.training.nc.sd3.service.impl.ProductOfferingServiceImpl .up.|> by.training.nc.sd3.service.ProductOfferingService
  by.training.nc.sd3.service.impl.ProductOfferingServiceImpl o-- by.training.nc.sd3.repository.ProductOfferingRepository : productOfferingRepository
  by.training.nc.sd3.service.impl.StatisticsServiceImpl .up.|> by.training.nc.sd3.service.StatisticsService
  by.training.nc.sd3.service.impl.StatisticsServiceImpl o-- by.training.nc.sd3.repository.StatisticsEntryRepository : statisticsEntryRepository
  by.training.nc.sd3.service.impl.UserAccountServiceImpl .up.|> by.training.nc.sd3.service.UserAccountService
  by.training.nc.sd3.service.impl.UserAccountServiceImpl o-- by.training.nc.sd3.repository.BillingAccountRepository : billingAccountRepository
  by.training.nc.sd3.service.impl.UserAccountServiceImpl o-- by.training.nc.sd3.repository.ProductInstanceRepository : productInstanceRepository
  by.training.nc.sd3.service.impl.UserAccountServiceImpl o-- by.training.nc.sd3.repository.UserAccountRepository : userAccountRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
